// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component should render with icon type 1`] = `
<Component>
  <Component
    style={
      Array [
        Object {
          "margin": 7,
        },
        Object {
          "borderRadius": 28,
          "height": 52,
          "width": 52,
        },
        false,
        Object {
          "alignItems": "center",
          "backgroundColor": "red",
          "justifyContent": "center",
        },
      ]
    }
    underlayColor="red"
  >
    <Icon
      allowFontScaling={false}
      color="white"
      name="alert"
      size={24}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "backgroundColor": "peru",
          },
        ]
      }
    />
  </Component>
</Component>
`;

exports[`Icon component should render without issues 1`] = `
<Component>
  <Component
    style={
      Array [
        false,
        false,
        false,
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
        },
      ]
    }
    underlayColor="white"
  >
    <Icon
      allowFontScaling={false}
      color="black"
      name="wifi"
      size={24}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
    />
  </Component>
</Component>
`;
